<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.romel.expensestracker.MainActivity">

    <EditText
        android:id="@+id/enter_amount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/enter_button"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/enter_button"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/net_expense_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/net_expenses"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/expenses_spinner"
        android:layout_width="368dp"
        android:layout_height="21dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/enter_amount_text" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/enter_button_text" />

    <TextView
        android:id="@+id/expense_dad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expenses_spinner"
        android:text="@string/dad_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/expense_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expense_dad"
        android:text="@string/food_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/expense_misc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expense_food"
        android:text="@string/misc_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/expense_prev_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expense_misc"
        android:text="@string/previous_month_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/expense_transportation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expense_prev_month"
        android:text="@string/transportation_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/expense_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expense_transportation"
        android:text="@string/work_text"
        android:textSize="20sp" />




</RelativeLayout>
